--- a/assets/css/media.css
+++ b/assets/css/media.css
@@ -31,6 +31,11 @@
   .mb-sm-1 {
     margin-bottom: 1em;
   }
+
+  .pe-sm-1 {
+    padding-right: 1 !important;
+  }
+
 }
 
 @media (min-width: 768px) {
